# game

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  input.rs  main.rs  obj.rs  player.rs  shader.wgsl  state.rs  texture.rs
