[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
futures = "0.3.28"
image = "0.24.6"
tobj = "4.0.0"
wgpu = "0.16.0"
winit = { path = "../winit" }
